--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -17,6 +17,15 @@ h4 {
   font-weight: 900;
   color: rgb(100, 100, 100);
 }
+
+.App {
+  transition: all 0.5s ease;
+}
+
+.library-active {
+  margin-left: 30%;
+}
+
 @import "./player";
 @import "./song";
 @import "./library";
