--- a/src/styles/_library.scss
+++ b/src/styles/_library.scss
@@ -25,6 +25,7 @@
   display: flex;
   align-items: center;
   padding: 1rem 2rem 1rem 2rem;
+  transition: all 0.5s ease;
   cursor: pointer;
   img {
     width: 30%;
@@ -60,4 +61,11 @@
 }
 *::-webkit-scrollbar-thumb {
   background-color: rgba(155, 155, 155, 0.5);
+}
+
+@media screen and (max-width: 768px) {
+  .library {
+    width: 100%;
+    border-radius: 0rem;
+  }
 }
