--- a/src/styles/_player.scss
+++ b/src/styles/_player.scss
@@ -42,3 +42,12 @@
     opacity: 0.3;
   }
 }
+
+@media screen and (max-width: 768px) {
+  .time-control {
+    width: 90%;
+  }
+  .play-control {
+    width: 60%;
+  }
+}
